--- a/wiki9/templates/inc/header.html
+++ b/wiki9/templates/inc/header.html
@@ -1,8 +1,8 @@
-<header class="row">
-    <div id="header_logo" class="two column hide-for-small"> 
+<header>
+    <div id="header_logo" class="hide-for-small"> 
         <img src="/pics/logo.gif"/>
     </div>
-    <div id="header_main" class="ten column">
+    <div id="header_main">
         <center><img width="305" height="115" src="/pics/head.gif"></center>
     </div>
 </header>
