--- a/wiki9/templates/inc/footer.html
+++ b/wiki9/templates/inc/footer.html
@@ -1,10 +1,10 @@
-<footer class="row">
+<footer>
   <hr />
-  <div class="six columns">
+  <div id="copyright">
     <p>Powered by Wiki9 Engine. &copy; 2012 xelez</p>
   </div>
-  <div class="six columns">
-    <ul class="link-list right">
+  <div id="footer_links">
+    <ul class="inline-list right">
       <li><a href="#">Project on GitHub</a></li>
     </ul>
   </div>
