--- a/wiki9/templates/inc/header.html
+++ b/wiki9/templates/inc/header.html
@@ -1,5 +1,5 @@
 <header>
-    <div id="header_logo" class="hide-for-small"> 
+    <div id="header_logo"> 
         <img src="/pics/logo.gif"/>
     </div>
     <div id="header_main">
