--- a/wiki9/templates/layout/with_sidebar.html
+++ b/wiki9/templates/layout/with_sidebar.html
@@ -2,14 +2,12 @@
 
 {% block main %}
   <div class="row" >
-    <div id="sidenav" class="two columns">
+    <div id="sidenav">
         {% include 'inc/sidenav.html' %}
     </div>
-    <div class="ten columns" role="content">
-        <div class="row">
-            {% block content %}
-            {% endblock content %}
-        </div>
+    <div id="main_container">
+        {% block content %}
+        {% endblock content %}
     </div> 
   </div>
 {% endblock main %}
