Move templates to bootstrap

--- a/wiki9/templates/inc/footer.html
+++ b/wiki9/templates/inc/footer.html
@@ -1,12 +1,5 @@
 <footer>
   <hr />
-  <div id="copyright">
-    <p>Powered by Wiki9 Engine. &copy; 2012 xelez</p>
-  </div>
-  <div id="footer_links">
-    <ul class="inline-list right">
-      <li><a href="#">Project on GitHub</a></li>
-    </ul>
-  </div>
+  <p>Powered by Wiki9 Engine. &copy; 2012 xelez. <a href="#">Project on GitHub</a></p>
 </footer>
 
