--- a/wiki9/templates/inc/header.html
+++ b/wiki9/templates/inc/header.html
@@ -1,8 +1,8 @@
-<header>
-    <div id="header_logo"> 
-        <img src="/pics/logo.gif"/>
-    </div>
-    <div id="header_main">
-        <center><img width="305" height="115" src="/pics/head.gif"></center>
-    </div>
-</header>
+<div class="masthead">
+    <ul class="nav nav-pills pull-right">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+    <h3 class="muted">Средняя школа №9</h3>
+</div>
