--- a/wiki9/templates/show_page.html
+++ b/wiki9/templates/show_page.html
@@ -1,18 +1,29 @@
 {% extends 'layout/with_sidebar.html' %}
 
 {% block content %}
-    <ul id="breadcrumbs" class="breadcrumbs left">
+    <ul class="breadcrumb">
     {% for t in page['breadcrumbs'] if (t is defined) %}
-        <li {{'class=current' if loop.last}}><a href="{{ url_for('show_page', path=t['path']) }}">{{ t['title'] }}</a></li>
+        {% if loop.last %}
+            <li class="active">
+                {{ t['title'] }}
+            </li>
+        {% else %}
+        <li>
+            <a href="{{ url_for('show_page', path=t['path']) }}">{{ t['title'] }}</a>
+            <span class="divider">/</span>
+        </li>
+        {% endif %}
     {% endfor %}
     </ul>
+
     {% if is_root() %}
         <ul class="button-group radius right">
-            <li><a href="{{ url_for('edit_page', path=page['path']) }}" class="tiny radius button">Редактировать</a></li>
-            <li><a href="{{ url_for('delete_page', path=page['path']) }}" class="tiny raduis button">Удалить</a></li>
+            <li><a href="{{ url_for('pages.edit', path=page['path']) }}" class="tiny radius button">Редактировать</a></li>
+            <li><a href="{{ url_for('pages.delete', path=page['path']) }}" class="tiny raduis button">Удалить</a></li>
         </ul>
     {% endif %}
-    <div id="content" class="twelve columns">
-    {{ page["html"] | safe }}
+    
+    <div id="content">
+        {{ page["html"] | safe }}
     </div>
 {% endblock content %}
