--- a/wiki9/templates/inc/footer.html
+++ b/wiki9/templates/inc/footer.html
@@ -1,5 +1,5 @@
 <footer>
   <hr />
-  <p>Powered by Wiki9 Engine. &copy; 2012 xelez. <a href="#">Project on GitHub</a></p>
+  <p>&copy; 2013 Sch9 Team</p>
 </footer>
 
