--- a/wiki9/templates/inc/header.html
+++ b/wiki9/templates/inc/header.html
@@ -1,8 +1,6 @@
-<div class="masthead">
-    <ul class="nav nav-pills pull-right">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-    </ul>
-    <h3 class="muted">Средняя школа №9</h3>
+<header class="jumbotron">
+<div class="container">
+    <h1>Летний Компьютерный Лагерь</h1>
+    <p class="lead">Пермь.2013.Апрель 11-28</p>
 </div>
+</header>
