--- a/wiki9/static/css/app.less
+++ b/wiki9/static/css/app.less
@@ -39,3 +39,14 @@
     z-index: 10;
     text-align: center;
 }
+
+.jumbotron {
+    background: linear-gradient(-45deg, #ffa500 0%, #ff5700 100%) repeat scroll 0 0 transparent;
+    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.2) inset, 0 -3px 7px rgba(0, 0, 0, 0.2) inset;
+    color: #FFFFFF;
+    padding: 6px 0;
+    margin: 0 0 4px 0;
+    position: relative;
+    text-align: center;
+    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.4), 0 0 30px rgba(0, 0, 0, 0.075);
+}
