--- a/wiki9/templates/layout/base.html
+++ b/wiki9/templates/layout/base.html
@@ -7,10 +7,10 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}{{ title | d('school9.perm.ru') }}{% endblock %}</title>  
+  <title>{% block title %}{{ title | d('Летний Компьютерный Лагерь 2013') }}{% endblock %}</title>  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="school9.perm.ru - сайт школы №9 г. Перми">
-  <meta name="author" content="Alex Ankudinov">
+  <meta name="description" content="school9.perm.ru/camp - сайт Летнего Компьютерного Лагеря">
+  <meta name="author" content="Sch9 team">
   
   {% block stylesheets %}
       {% assets "site_css" %}
