Fix stupid typo

--- a/wiki9/templates/inc/header.html
+++ b/wiki9/templates/inc/header.html
@@ -1,6 +1,6 @@
 <header class="jumbotron">
 <div class="container">
     <h1>Летний Компьютерный Лагерь</h1>
-    <p class="lead">Пермь.2013.Апрель 11-28</p>
+    <p class="lead">Пермь.2013.Август 11-28</p>
 </div>
 </header>
