Add top navbar when root is logged in

--- a/wiki9/templates/layout/base.html
+++ b/wiki9/templates/layout/base.html
@@ -21,6 +21,10 @@
 <body>
   {% include 'inc/message-flashing.html' %}
   
+  {% if is_root() -%}
+    {% include 'inc/root-nav.html' %}
+  {%- endif %}
+  
   <div class="container-fluid">
   {% block layout_body %}
   {% endblock layout_body %}
