--- a/wiki9/static/css/app.less
+++ b/wiki9/static/css/app.less
@@ -42,11 +42,23 @@
 
 .jumbotron {
     background: linear-gradient(-45deg, #ffa500 0%, #ff5700 100%) repeat scroll 0 0 transparent;
-    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.2) inset, 0 -3px 7px rgba(0, 0, 0, 0.2) inset;
-    color: #FFFFFF;
+    color: #fff;
     padding: 6px 0;
     margin: 0 0 4px 0;
     position: relative;
     text-align: center;
-    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.4), 0 0 30px rgba(0, 0, 0, 0.075);
+    text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075);
+    
+    background: #ffa500; /* Old browsers */
+    background: -moz-linear-gradient(-45deg,  #ffa500 0%, #ff5700 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#ffa500), color-stop(100%,#ff5700)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(-45deg,  #ffa500 0%,#ff5700 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(-45deg,  #ffa500 0%,#ff5700 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(-45deg,  #ffa500 0%,#ff5700 100%); /* IE10+ */
+    background: linear-gradient(-45deg,  #ffa500 0%,#ff5700 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa500', endColorstr='#ff5700',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    -webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
+       -moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
+            box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
 }
+
